# socketcanfd

./: .gitignore  CMakeLists.txt  README.md
config/: canfd_config.yaml
include/: canfd.hpp
src/: canfd.cpp  socketcanfd_read.cpp  socketcanfd_write.cpp
